--- a/cmd/Cargo.toml
+++ b/cmd/Cargo.toml
@@ -6,4 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+futures = "0.3"
 clap = { version = "4.5.4", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.12", features = ["json"] }
+tokio = { version = "1.38", features = ["full"] }
+tokio-macros = { version = "2.3" }
+thiserror = "1.0"
